# Codierungstheorie

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-pipeline.yml  cmake.yml
Codierungstheorie/: README.md
Codierungstheorie/Header Files/: Basis.h  Code.h  Codierungstheorie.h  EGF.h  Helper.h  Matrix.h  ModularArithmetic.h  ModularPolynomArithmetic.h  Polynom.h
Codierungstheorie/Header Files/CodierungAblauf/: Code.h  CodierungsAblauf.h  HammingCode.cpp  HammingCode.h  Kanal.h  ReedMueller.h  VariableErrorKanal.h
Codierungstheorie/Header Files/Task_6/: Gruppe.cpp  Gruppe.h  ReedSolomonCode.cpp  ReedSolomonCode.h
Codierungstheorie/Source Files/: Basis.cpp  Code.cpp  EGF.cpp  Matrix.cpp  ModularArithmetic.cpp  ModularPolynomArithmetic.cpp  Polynom.cpp  Task_1.cpp  Task_2.cpp  Task_3.cpp  Task_4.cpp  Task_5.cpp  main.cpp
Codierungstheorie/Source Files/CodierungAblauf/: CodierungsAblauf.cpp  HammingCode.cpp  ReedMueller.cpp  VariableErrorKanal.cpp
DOC/AM/: add_matrix_1.csv  add_matrix_2.csv  add_matrix_3.csv  add_matrix_4.csv  add_matrix_5.csv  add_matrix_6.csv  add_matrix_7.csv  add_matrix_8.csv
MultMatrix/: Main.gd  Main.tscn  MatrixCell.gd  MatrixCell.tscn  MatrixRect.gd  MatrixVisualisation.pck  README.md  TEST.gd  add_matrix_1.png.import  icon.svg.import  project.godot  rect.tscn  test.png.import  texture_rect.tscn
Testlab/Header Files/: EGFTests.h  HelperTests.h  MatrixTests.h  ModularPolynomArithmeticTests.h  PolynomTests.h  doctest.h
Testlab/Source Files/: PolynomTests.cpp  Testlab.cpp
